Fix spacing on portfolio box for mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -215,6 +215,7 @@ header.masthead {
   position: relative;
   display: block;
   max-width: 650px;
+  height: 200px;
   margin: 0 auto; }
   .portfolio-box .portfolio-box-caption {
     position: absolute;
